test/scripted/compilation2/errors/expected_proto.bnj
# test:error 3:11 "expected proto"

struct S: i32 {}
